Closed Bug 1667027 Opened 4 years ago Closed 4 years ago

Fix more tests using legacySHistory

Categories

(Core :: DOM: Navigation, defect, P2)

defect

Tracking

()

RESOLVED FIXED
83 Branch
Fission Milestone M6b
Tracking Status
firefox83 --- fixed

People

(Reporter: farre, Assigned: farre)

References

Details

Attachments

(1 file)

No description provided.
Assignee: nobody → afarre
Status: NEW → ASSIGNED

The remaining (non-skipped) tests using legacySHistory are:

browser/components/sessionstore/test/browser_705597.js
browser/components/sessionstore/test/browser_707862.js
browser/components/sessionstore/test/browser_docshell_uuid_consistency.js
docshell/test/mochitest/test_bug509055.html
docshell/test/mochitest/test_bug590573.html

With this patch browser/components/sessionstore/test/browser_705597.js and browser/components/sessionstore/test/browser_707862.js passes.

browser/components/sessionstore/test/browser_docshell_uuid_consistency.js has problems with historyID for parent (i.e. chrome) docshells, but the test is actually failing for that reason.

docshell/test/mochitest/test_bug509055.html and docshell/test/mochitest/test_bug590573.html both do same document navigation (fragment navigation), where doing history.back() doesn't work because the session history index is wrong.

Fission M6b
P2/S3

Severity: -- → S3
Fission Milestone: --- → M6b
Priority: -- → P2
Pushed by afarre@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/2ab91d12a205
Fix more tests that uses legacySHistory. r=peterv
Status: ASSIGNED → RESOLVED
Closed: 4 years ago
Resolution: --- → FIXED
Target Milestone: --- → 83 Branch
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: