Bug 1667027 - Fix more tests that uses legacySHistory. r=peterv

Differential Revision: https://phabricator.services.mozilla.com/D91277