docshell/base/CanonicalBrowsingContext.cpp
@@ -162,6 +162,7 @@ void CanonicalBrowsingContext::ReplacedBy(
   }
   aNewContext->mWebProgress = std::move(mWebProgress);
   aNewContext->mFields.SetWithoutSyncing<IDX_BrowserId>(GetBrowserId());
+  aNewContext->mFields.SetWithoutSyncing<IDX_HistoryID>(GetHistoryID());
 
   if (mSessionHistory) {
     mSessionHistory->SetBrowsingContext(aNewContext);
