browser/components/sessionstore/test/browser_docshell_uuid_consistency.js
@@ -4,20 +4,58 @@ add_task(async function duplicateTab() {
   let tab = BrowserTestUtils.addTab(gBrowser, TEST_URL);
   await BrowserTestUtils.browserLoaded(tab.linkedBrowser);
 
-  await SpecialPowers.spawn(tab.linkedBrowser, [], function() {
-    let docshell = content.window.docShell.QueryInterface(Ci.nsIWebNavigation);
-    let shEntry = docshell.sessionHistory.legacySHistory.getEntryAtIndex(0);
-    is(shEntry.docshellID.toString(), docshell.historyID.toString());
-  });
+  if (!Services.appinfo.sessionHistoryInParent) {
+    await SpecialPowers.spawn(tab.linkedBrowser, [], function() {
+      let docshell = content.window.docShell.QueryInterface(
+        Ci.nsIWebNavigation
+      );
+      let shEntry = docshell.sessionHistory.legacySHistory.getEntryAtIndex(0);
+      is(shEntry.docshellID.toString(), docshell.historyID.toString());
+    });
+  } else {
+    let historyID = await SpecialPowers.spawn(
+      tab.linkedBrowser,
+      [],
+      function() {
+        let docshell = content.window.docShell.QueryInterface(
+          Ci.nsIWebNavigation
+        );
+        return docshell.historyID.toString();
+      }
+    );
+    let shEntry = tab.linkedBrowser.browsingContext.sessionHistory.getEntryAtIndex(
+      0
+    );
+    is(shEntry.docshellID.toString(), historyID.toString());
+  }
 
   let tab2 = gBrowser.duplicateTab(tab);
   await BrowserTestUtils.browserLoaded(tab2.linkedBrowser);
 
-  await SpecialPowers.spawn(tab2.linkedBrowser, [], function() {
-    let docshell = content.window.docShell.QueryInterface(Ci.nsIWebNavigation);
-    let shEntry = docshell.sessionHistory.legacySHistory.getEntryAtIndex(0);
-    is(shEntry.docshellID.toString(), docshell.historyID.toString());
-  });
+  if (!Services.appinfo.sessionHistoryInParent) {
+    await SpecialPowers.spawn(tab2.linkedBrowser, [], function() {
+      let docshell = content.window.docShell.QueryInterface(
+        Ci.nsIWebNavigation
+      );
+      let shEntry = docshell.sessionHistory.legacySHistory.getEntryAtIndex(0);
+      is(shEntry.docshellID.toString(), docshell.historyID.toString());
+    });
+  } else {
+    let historyID = await SpecialPowers.spawn(
+      tab2.linkedBrowser,
+      [],
+      function() {
+        let docshell = content.window.docShell.QueryInterface(
+          Ci.nsIWebNavigation
+        );
+        return docshell.historyID.toString();
+      }
+    );
+    let shEntry = tab2.linkedBrowser.browsingContext.sessionHistory.getEntryAtIndex(
+      0
+    );
+    is(shEntry.docshellID.toString(), historyID.toString());
+  }
 
   BrowserTestUtils.removeTab(tab);
   BrowserTestUtils.removeTab(tab2);
@@ -29,15 +67,33 @@ add_task(async function contentToChromeNavigate() {
   let tab = BrowserTestUtils.addTab(gBrowser, TEST_URL);
   await BrowserTestUtils.browserLoaded(tab.linkedBrowser);
 
-  await SpecialPowers.spawn(tab.linkedBrowser, [], function() {
-    let docshell = content.window.docShell.QueryInterface(Ci.nsIWebNavigation);
-    let sh = docshell.sessionHistory;
-    is(sh.count, 1);
-    is(
-      sh.legacySHistory.getEntryAtIndex(0).docshellID.toString(),
-      docshell.historyID.toString()
+  if (!Services.appinfo.sessionHistoryInParent) {
+    await SpecialPowers.spawn(tab.linkedBrowser, [], function() {
+      let docshell = content.window.docShell.QueryInterface(
+        Ci.nsIWebNavigation
+      );
+      let sh = docshell.sessionHistory;
+      is(sh.count, 1);
+      is(
+        sh.legacySHistory.getEntryAtIndex(0).docshellID.toString(),
+        docshell.historyID.toString()
+      );
+    });
+  } else {
+    let historyID = await SpecialPowers.spawn(
+      tab.linkedBrowser,
+      [],
+      function() {
+        let docshell = content.window.docShell.QueryInterface(
+          Ci.nsIWebNavigation
+        );
+        return docshell.historyID.toString();
+      }
     );
-  });
+    let sh = tab.linkedBrowser.browsingContext.sessionHistory;
+    is(sh.count, 1);
+    is(sh.getEntryAtIndex(0).docshellID.toString(), historyID);
+  }
 
   // Force the browser to navigate to the chrome process.
   await SpecialPowers.spawn(tab.linkedBrowser, [], function() {
@@ -54,17 +110,31 @@ add_task(async function contentToChromeNavigate() {
   let docShell = tab.linkedBrowser.frameLoader.docShell;
 
   // 'cause we're in the chrome process, we can just directly poke at the shistory.
-  let sh = docShell.QueryInterface(Ci.nsIWebNavigation).sessionHistory;
+  if (!Services.appinfo.sessionHistoryInParent) {
+    let sh = docShell.QueryInterface(Ci.nsIWebNavigation).sessionHistory;
 
-  is(sh.count, 2);
-  is(
-    sh.legacySHistory.getEntryAtIndex(0).docshellID.toString(),
-    docShell.historyID.toString()
-  );
-  is(
-    sh.legacySHistory.getEntryAtIndex(1).docshellID.toString(),
-    docShell.historyID.toString()
-  );
+    is(sh.count, 2);
+    is(
+      sh.legacySHistory.getEntryAtIndex(0).docshellID.toString(),
+      docShell.historyID.toString()
+    );
+    is(
+      sh.legacySHistory.getEntryAtIndex(1).docshellID.toString(),
+      docShell.historyID.toString()
+    );
+  } else {
+    let sh = docShell.browsingContext.sessionHistory;
+
+    is(sh.count, 2);
+    is(
+      sh.getEntryAtIndex(0).docshellID.toString(),
+      docShell.historyID.toString()
+    );
+    is(
+      sh.getEntryAtIndex(1).docshellID.toString(),
+      docShell.historyID.toString()
+    );
+  }
 
   BrowserTestUtils.removeTab(tab);
 });
